<resources>
    <string name="app_name">PSTU Profile</string>
    <string name="title_name">Attention!!</string>
    <string name="message">Do you want to update or delete</string>
    <string name="inDevelopment">ফিচারটি এখনো ডেভেলপমেন্ট এ আছে</string>
    <string name="noDataRecorded">কোন ডাটা পাওয়া যায় নি</string>
    <string name="poorInternetConnection"> দুর্বল ইন্টারনেট কানেকশন</string>
    <string name="pstu_website_link">https://www.pstu.ac.bd/</string>
    <string name="mainActivity_pstu_website_title">পবিপ্রবি ওয়েবসাইট</string>
    <string name="mainActivity_pstu">পটুয়াখালি বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয়</string>
    <string name="mainActivity_vc">ভিসি</string>
    <string name="mainActivity_dean">ডীন</string>
    <string name="mainActivity_teacherLogin">শিক্ষক লগিন</string>
    <string name="mainActivity_allTeacher">সকল শিক্ষক</string>
    <string name="mainActivity_studentLogin">শিক্ষার্থী লগিন</string>
    <string name="mainActivity_allStudents">সকল শিক্ষার্থী</string>
    <string name="mainActivity_allCourse">সকল কোর্স</string>
    <string name="mainActivity_website">ওয়েবসাইট</string>
    <string name="mainActivity_developer">ডেভেলপার</string>
    <string name="allStudents_allStudents">সকল শিক্ষার্থী</string>
    <string name="allStudents_seeAllStudents">শিক্ষার্থীদের দেখুন</string>
    <string name="allTeachers_allTeachers">শিক্ষকবৃন্দ</string>
    <string name="allTeachers_seeAllTeachers">শিক্ষকদের দেখুন</string>
    <string name="courseDetails_facultyName">ফ্যাকাল্টির নাম</string>
    <string name="courseDetails_seeAllCourse">সকল কোর্স দেখুন</string>
    <string name="courseFaculty_allFaculty">অনুষদ লিস্ট</string>
    <string name="courseFaculty_agriculture">এগ্রিকালচার</string>
    <string name="courseFaculty_cse">সিএসই</string>
    <string name="courseFaculty_bba">বিবিএ</string>
    <string name="courseFaculty_nfs">এনএফএস</string>
    <string name="courseFaculty_esdm">ডিজাস্টার ম্যানেজমেন্ট</string>
    <string name="courseFaculty_dvm">ভ্যাটেনারি মেডিসিন</string>
    <string name="courseFaculty_fisharies">ফিসারিজ</string>
    <string name="courseFaculty_land">ল্যান্ড ম্যানেজমেন্ত</string>
    <string name="courseFaculty_animal">এনিম্যাজ হ্যাজবেন্ডারী</string>
    <string name="courseFaculty_upcomingFaculty">upcoming faculty</string>
    <string name="courseListItemLayout_allFaculty">কোর্স টাইটেল</string>
    <string name="facebook_actonbar">Facebook</string>
    <string name="facebook_account">https://www.facebook.com/tanvir.anwar.rafi</string>
    <string name="linkedIn_actonbar">LinkedIn</string>
    <string name="linkedIn_account">https://www.linkedin.com/in/tanviranwarrafi/</string>
    <string name="git_actonbar">Git</string>
    <string name="git_account">https://github.com/tanviranwarrafi</string>
    <string name="instagram_actonbar">Instagram</string>
    <string name="instagram_account">https://www.instagram.com/rafyeetanvir/</string>
    <string name="skype_account">tanvir.anwar.rafi</string>
    <string name="pstuProfile_actonbar">PSTU Profile App</string>
    <string name="pstuProfile_app">http://bit.ly/2J8fZZj</string>
    <string name="familyContact_actionbar">পরিবার এ্যাপ</string>
    <string name="familyContact_app">https://bit.ly/2zuBDFZ</string>
    <string name="dean_deanList">ডীন লিস্ট</string>
    <string name="agriculture_dean_name">প্রফেসর ড. গোলাম রব্বানী আকন্দ</string>
    <string name="agriculture_dean_designation">ডীন, কৃষি অনুষদ</string>
    <string name="agriculture_dean_contact">০১৭১৬৯৫০৭২৭</string>
    <string name="agriculture_dean_email">deanag@pstu.ac.bd</string>
    <string name="agriculture_dean_fax">২৩৬</string>
    <string name="agriculture_dean_address">ময়মনসিংহ</string>
    <string name="cse_dean_name">প্রফেসর মোঃ জামাল হোসেন</string>
    <string name="cse_dean_designation">ডীন, সিএসই অনুষদ</string>
    <string name="cse_dean_contact">০১৮৬৫১০২৪০০</string>
    <string name="cse_dean_email">jamalpstu07@gmail.com</string>
    <string name="cse_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="cse_dean_address">বাউফল, পটুয়াখালি</string>
    <string name="bba_dean_name">প্রফেসর মোঃ জাকির হোসেন</string>
    <string name="bba_dean_designation">ডীন, বিবিএ অনুষদ</string>
    <string name="bba_dean_contact">০১৭১৪২০৯৩০৬</string>
    <string name="bba_dean_email">deanbam@pstu.ac.bd</string>
    <string name="bba_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="bba_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="ansvm_dean_name">প্রফেসর ড. মোঃ মামুন অর রশিদ</string>
    <string name="ansvm_dean_designation">ডীন, এএনএসভিএম অনুষদ</string>
    <string name="ansvm_dean_contact">০১৭১১৪৬৬৪৩০</string>
    <string name="ansvm_dean_email">deanansvm@pstu.ac.bd</string>
    <string name="ansvm_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="ansvm_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="fisharies_dean_name">প্রফেসর ড. মোঃ লোকমান আলী</string>
    <string name="fisharies_dean_designation">ডীন, ফিসারিজ অনুষদ</string>
    <string name="fisharies_dean_contact">০১৭১৬৩৭৯১৩১</string>
    <string name="fisharies_dean_email">deanfisheries@pstu.ac.bd</string>
    <string name="fisharies_dean_fax">২৩৬</string>
    <string name="fisharies_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="disaster_dean_name">প্রফেসর ড. মোঃ হারুন-অর-রশিদ</string>
    <string name="disaster_dean_designation">ডীন, ইএসডিএম অনুষদ</string>
    <string name="disaster_dean_contact">০৪৪৫৬০১০</string>
    <string name="disaster_dean_email">deandm@pstu.ac.bd</string>
    <string name="disaster_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="disaster_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="nfs_dean_name">প্রফেসর ড. মোঃ হারুন-অর-রশিদ</string>
    <string name="nfs_dean_designation">ডীন, এনএফএস অনুষদ</string>
    <string name="nfs_dean_contact">০৪৪২৭৫৬০১২</string>
    <string name="nfs_dean_email">deannfs@pstu.ac.bd</string>
    <string name="nfs_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="nfs_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="land_dean_name">প্রফেসর মোঃ আলী</string>
    <string name="land_dean_designation">ডীন, এলএমএ অনুষদ</string>
    <string name="land_dean_contact">০১৭১৬৯১৯৫৬৩</string>
    <string name="land_dean_email">deanlma@pstu.ac.bd</string>
    <string name="land_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="land_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="pgs_dean_name">প্রফেসর মোঃ আলী</string>
    <string name="pgs_dean_designation">ডীন, পিজিএস অনুষদ</string>
    <string name="pgs_dean_contact">০১৭১৬৯১৯৫৬৩</string>
    <string name="pgs_dean_email">deanpgs@pstu.ac.bd</string>
    <string name="pgs_dean_fax">কোন ফ্যাক্স পাওয়া যায় নি</string>
    <string name="pgs_dean_address">ঠিকানা পাওয়া যায় নি</string>
    <string name="deanDetails_deanDetails">ডীন ডিটেইলস</string>
    <string name="developer_developerName">মোঃ তানভীর আনোয়ার রাফি</string>
    <string name="developer_androidDeveloper">এন্ড্রয়েড ডেভেলপার</string>
    <string name="developer_gobackToDashBoard">ড্যাশবোর্ডে ফিরে যান</string>
    <string name="developer_01521438885">০১৫২১৪৩৮৮৮৫</string>
    <string name="developer_developerEmail">tanviranwarrafi@gmail.com</string>
    <string name="developer_developerAddress">নয়াপাড়া, জামালপুর-২০০০</string>
    <string name="developer_playStoreApp">প্লে-স্টোর এ্যাপ</string>
    <string name="developerWebview_website">ওয়েবসাইট</string>
    <string name="dialogDetails_courseDetails">কোর্স ডিটেইলস</string>
    <string name="dialogDetails_courseTitle">কোর্স টাইটেল</string>
    <string name="dialogDetails_courseCredit">3 Credit Hour</string>
    <string name="dialogDetails_courseCode">Physics-I</string>
    <string name="splashScreen_pstu">পবিপ্রবি</string>
    <string name="studentDetails_studentProfile">শিক্ষার্থী প্রোফাইল</string>
    <string name="studentDetails_studentName">ছাত্র-ছাত্রীর নাম</string>
    <string name="studentDetails_campusId">ক্যাম্পাস আইডি নম্বর</string>
    <string name="studentDetails_registrationNo">রেজিস্ট্রেশন নম্বর</string>
    <string name="studentDetails_faculty">ফ্যাকাল্টি</string>
    <string name="studentDetails_batch">বযাচ</string>
    <string name="studentDetails_contactNo">মোবাইল নম্বর</string>
    <string name="studentDetails_emailAddress">ই-মেইল এডড্রেস</string>
    <string name="studentDetails_phoneCall">ফোন কল</string>
    <string name="studentDetails_sms">এসএমএস</string>
    <string name="studentDetails_email">ই-মেইল</string>
    <string name="studentListItemLayout_studentName">স্টুডেন্টের নাম</string>
    <string name="studentListItemLayout_batch">ব্যাচ</string>
    <string name="studentLoggedIn_profile">প্রোফাইল</string>
    <string name="studentLoggedIn_studentName">ছাত্র-ছাত্রীর নাম</string>
    <string name="studentLoggedIn_campusId">ক্যাম্পাস আইডি নম্বর</string>
    <string name="studentLoggedIn_registrationNo">রেজিস্ট্রেশন নম্বর</string>
    <string name="studentLoggedIn_password">পাসওয়ার্ড</string>
    <string name="studentLoggedIn_faculty">ফ্যাকাল্টি</string>
    <string name="studentLoggedIn_batch">ব্যাচ</string>
    <string name="studentLoggedIn_contactNo">মোবাইল নম্বর</string>
    <string name="studentLoggedIn_email">ই-মেইল এডড্রেস</string>
    <string name="studentLoggedIn_update">আপডেট</string>
    <string name="studentLogin_campusId">ক্যাম্পাস আইডি</string>
    <string name="studentLogin_password">গোপন পাসওয়ার্ড</string>
    <string name="studentLogin_forgotPassword">আপনি কি পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="studentLogin_rememberpassword">পাসওয়ার্ড দেখুন</string>
    <string name="studentLogin_signIn">সাইন ইন</string>
    <string name="studentLogin_dontHaveAnyAccount">আপনার কোন অ্যাকাউন্ট নেই? </string>
    <string name="studentLogin_signInPlease">সাইন আপ করুন</string>
    <string name="studentSignUp_dontHaveAnyAccount">আপনার কোন অ্যাকাউন্ট নেই?</string>
    <string name="studentSignUp_studentName">ছাত্র-ছাত্রীর নাম*</string>
    <string name="studentSignUp_campusId">ক্যাম্পাস আইডি নম্বর (৭ ডিজিট)*</string>
    <string name="studentSignUp_registrationNo">রেজিস্ট্রেশন নম্বর*</string>
    <string name="studentSignUp_password">পাসওয়ার্ড*</string>
    <string name="studentSignUp_selectFaculty">ফ্যাকাল্টি সিলেক্ট করুন* </string>
    <string name="studentSignUp_selectBatch">ব্যাচ সিলেক্ট করুন*</string>
    <string name="studentSignUp_contactNo">মোবাইল নম্বর (১১ ডিজিট)*</string>
    <string name="studentSignUp_email">ই-মেইল এডড্রেস*</string>
    <string name="studentSignUp_signUp">সাইন আপ করুন</string>
    <string name="studentSignUp_alreadyHaveAnyAccount">আপনার কি একাউন্ট আছে? </string>
    <string name="studentSignUp_signInPlease">সাইন ইন করুন</string>
    <string name="studentSignUp_errorCampusId">৭ ডিজিটের আইডি ডিন</string>
    <string name="studentSignUp_errorContact">১১ ডিজিটের মোবাইল নাম্বার দিন</string>
    <string name="studentSignUp_errorEmail">সঠিক ই-মেইল দিন</string>
    <string name="studentSignUp_registeredId">দুঃখিত!! এটি রেজিস্টার্ড আইডি</string>
    <string name="studentSignUp_registrationSuccess">রেজিস্ট্রেশন সফল হয়েছে</string>
    <string name="studentSignUp_somethingWrong">দুঃখিত!! পুনরায় চেস্টা করুন</string>
    <string name="studentUpdate_studentUpdate">শিক্ষার্থী আপডেট</string>
    <string name="studentUpdate_studentName">ছাত্র-ছাত্রীর নাম</string>
    <string name="studentUpdate_newPassword">নতুন পাসওয়ার্ড</string>
    <string name="teacherLogin_teacherEmail">ই-মেইল এডড্রেস</string>
    <string name="teacherLogin_password">গোপন পাসওয়ার্ড</string>
    <string name="teacherLogin_forgotPassword">আপনি কি পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="teacherLogin_rememberpassword">পাসওয়ার্ড দেখুন</string>
    <string name="teacherLogin_signIn">সাইন ইন</string>
    <string name="teacherLogin_dontHaveAnyAccount">আপনার কোন অ্যাকাউন্ট নেই? </string>
    <string name="teacherLogin_signInPlease"> সাইন আপ করুন</string>
</resources>