<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rafyee.rafyee_rajiv.pstuprofile.TeacherProfile.TeacherLogin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_illustration_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teacherLogin_teacherEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_bg"
        android:drawableLeft="@drawable/lock_24"
        android:drawablePadding="10dp"
        android:elevation="8dp"
        android:fontFamily="@font/bensen_handwriting"
        android:hint="@string/teacherLogin_teacherEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:textColor="@color/colorText"
        android:textColorHint="#9E9E9E"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/teacherLogin_teacherPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_bg"
        android:drawableLeft="@drawable/lock_24"
        android:drawablePadding="10dp"
        android:elevation="8dp"
        android:fontFamily="@font/bensen_handwriting"
        android:hint="@string/teacherLogin_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textColor="@color/colorText"
        android:textColorHint="#9E9E9E"
        android:textSize="40px"
        app:layout_constraintEnd_toEndOf="@+id/teacherLogin_teacherEmail"
        app:layout_constraintStart_toStartOf="@+id/teacherLogin_teacherEmail"
        app:layout_constraintTop_toBottomOf="@+id/teacherLogin_teacherEmail" />

    <net.igenius.customcheckbox.CustomCheckBox
        android:id="@+id/teacherLogin_checkBox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:color_checked="@color/colorAccent"
        app:color_tick="@color/white"
        app:color_unchecked="@color/white"
        app:color_unchecked_stroke="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/teacherLogin_teacherPassword"
        app:layout_constraintTop_toBottomOf="@+id/teacherLogin_teacherPassword"
        app:small_tick="false"
        app:stroke_width="2dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/bensen_handwriting"
        android:text="@string/teacherLogin_rememberpassword"
        android:textColor="@color/colorText"
        android:textSize="32px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/teacherLogin_checkBox"
        app:layout_constraintStart_toEndOf="@+id/teacherLogin_checkBox"
        app:layout_constraintTop_toTopOf="@+id/teacherLogin_checkBox" />

    <TextView
        android:id="@+id/teacherLogin_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bensen_handwriting"
        android:text="@string/teacherLogin_forgotPassword"
        android:textColor="@color/colorText"
        android:textSize="32px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherLogin_teacherPassword" />

    <Button
        android:id="@+id/teacherLogin_LoginBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teacherLogin_forgotPassword" />

    <ProgressBar
        android:id="@+id/teacherLogin_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/teacherLogin_LoginBtn"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bensen_handwriting"
        android:text="@string/teacherLogin_signIn"
        android:textColor="@color/colorText"
        android:textSize="48px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/teacherLogin_LoginBtn"
        app:layout_constraintEnd_toStartOf="@+id/teacherLogin_LoginBtn"
        app:layout_constraintTop_toTopOf="@+id/teacherLogin_LoginBtn" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bensen_handwriting"
            android:text="@string/teacherLogin_dontHaveAnyAccount"
            android:textColor="@color/colorText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/teacherLogin_teacherSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bensen_handwriting"
            android:text="@string/teacherLogin_signInPlease"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>