<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rafyee.rafyee_rajiv.pstuprofile.StudentProfile.StudentSignUp">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/topView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_illustration_login"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/studentSignUp_dontHaveAnyAccount"
        android:fontFamily="@font/bensen_handwriting"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/studentSignUp_studentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/just_border_amber"
                android:drawableLeft="@drawable/person_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorText"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/bensen_handwriting"
                android:hint="@string/studentSignUp_studentName"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

            <EditText
                android:id="@+id/studentSignUp_studentID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/just_border_amber"
                android:drawableLeft="@drawable/one_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorText"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/bensen_handwriting"
                android:hint="@string/studentSignUp_campusId"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

            <EditText
                android:id="@+id/studentSignUp_studentRegistrationNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/just_border_amber"
                android:drawableLeft="@drawable/two_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorText"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/bensen_handwriting"
                android:hint="@string/studentSignUp_registrationNo"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

            <EditText
                android:id="@+id/studentSignUp_studentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/just_border_amber"
                android:drawableLeft="@drawable/lock_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorText"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/bensen_handwriting"
                android:hint="@string/studentSignUp_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/bensen_handwriting"
                android:text="@string/studentSignUp_selectFaculty"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/studentSignUp_studentFaculty"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/just_border_amber"
                android:fontFamily="@font/kalpurush"
                android:textStyle="bold"
                android:elevation="3dp"
                android:entries="@array/facultys"
                android:paddingTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/bensen_handwriting"
                android:text="@string/studentSignUp_selectBatch"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/studentSignUp_studentBatch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/just_border_amber"
                android:fontFamily="@font/kalpurush"
                android:textStyle="bold"
                android:elevation="3dp"
                android:entries="@array/batchs"/>

            <EditText
                android:id="@+id/studentSignUp_studentContactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/just_border_amber"
                android:drawableLeft="@drawable/android_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorText"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/bensen_handwriting"
                android:inputType="phone"
                android:padding="8dp"
                android:hint="@string/studentSignUp_contactNo"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

            <EditText
                android:id="@+id/studentSignUp_studentEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/just_border_amber"
                android:drawableLeft="@drawable/email_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/colorText"
                android:elevation="3dp"
                android:ems="10"
                android:fontFamily="@font/bensen_handwriting"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:hint="@string/studentSignUp_email"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/studentSignUp_progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/studentSignUp_signUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/round_bg"
                    android:backgroundTint="@color/amber_primary_dark"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/call_round"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/bensen_handwriting"
                        android:gravity="center"
                        android:text="@string/studentSignUp_signUp"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/no_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bensen_handwriting"
                        android:text="@string/studentSignUp_alreadyHaveAnyAccount"
                        android:textColor="@color/colorText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/studentLogin_studentSignUp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/studentSignUp_signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bensen_handwriting"
                        android:text="@string/studentSignUp_signInPlease"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/no_id"
                        app:layout_constraintStart_toEndOf="@+id/no_id" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>